=== 0.10 / 2012-01-30

* Added a simple example program -- a mock database using unification for
  query

* more documentation improvements

* added a hack to handle Rulog::Functor specially during unification for the
  moment; this will be handled more cleanly in the released version of rulog

* tested with Ruby 1.9.3 as well as 1.8.7

=== 0.9 / 2012-01-12

* unific split out from the in-development rulog (Ruby With Logic) gem

